renomeando arquivos de vantagens da empresa e botão de voltar no form de editar

--- a/code/src/views/telaInicial.ejs
+++ b/code/src/views/telaInicial.ejs
@@ -353,7 +353,7 @@
         <div class="card-content">
           <p>Crie, edite e gerencie as vantagens oferecidas aos estudantes.</p>
           <br>
-          <a href="/vantagens" class="btn btn-primary">Acessar Vantagens</a>
+          <a href="/vantagens-empresa" class="btn btn-primary">Acessar Vantagens</a>
         </div>
       </div>
       <!-- <div class="card">
