--- a/code/src/views/vantagens-empresa.ejs
+++ b/code/src/views/vantagens-empresa.ejs
@@ -437,7 +437,7 @@
       <a href="/" class="navbar-brand">Sistema Moeda Estudantil</a>
       <div class="navbar-menu">
         <a href="/" class="navbar-link">Início</a>
-        <a href="/vantagens" class="navbar-link">Vantagens</a>
+        <a href="/vantagens-empresa" class="navbar-link">Vantagens</a>
         <div class="dropdown">
           <div class="user-avatar" id="userAvatar" onclick="toggleDropdown()">E</div>
           <div class="dropdown-content" id="dropdownContent">
