fix: passando login/logout e outras funções relacionadas ao usuário para padrão mvc + crud transação

--- a/code/src/views/cadastro.ejs
+++ b/code/src/views/cadastro.ejs
@@ -445,7 +445,7 @@
             } else {
               alert('Aluno cadastrado com sucesso!');
               form.reset();
-              window.location.href = '/login'
+              window.location.href = '/usuario/login'
             }
           })
           .catch(error => {
@@ -473,7 +473,7 @@
             } else {
               alert('Professor cadastrado com sucesso!');
               form.reset();
-              window.location.href = '/login'
+              window.location.href = '/usuario/login'
             }
           })
           .catch(error => {
@@ -502,7 +502,7 @@
             } else {
               alert('Empresa cadastrada com sucesso!');
               form.reset();
-              window.location.href = '/login'
+              window.location.href = '/usuario/login'
             }
           })
           .catch(error => {
