--- a/code/src/views/login.ejs
+++ b/code/src/views/login.ejs
@@ -164,7 +164,7 @@
         if (!isValid) return;
         
         // Envia os dados para o servidor
-        fetch('/login', {
+        fetch('/usuario/login', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
