feat: back + front de envio de moedas funcional para o professor

--- a/code/src/views/telaInicial.ejs
+++ b/code/src/views/telaInicial.ejs
@@ -384,13 +384,13 @@
     <div class="dashboard-grid" id="opcoesProfessor">
       <div class="card">
         <div class="card-header">
-          <div class="card-icon" style="background-color: var(--success); color: white;">🎁</div>
-          <div class="card-title">A decidir</div>
+          <div class="card-icon" style="background-color: var(--success); color: white;">💰</div>
+          <div class="card-title">Enviar Moedas</div>
         </div>
         <div class="card-content">
-          <p>Crie, edite e gerencie as vantagens oferecidas aos estudantes.</p>
+          <p>Envie moedas para reconhecer o bom desempenho dos alunos.</p>
           <br>
-          <a href="/vantagens" class="btn btn-primary">Acessar Vantagens</a>
+          <a href="/professores/enviar-moedas" class="btn btn-primary">Enviar Moedas</a>
         </div>
       </div>
     </div>
