inicio na visualizacao do historico de transacoes (professor)

--- a/code/src/views/telaInicial.ejs
+++ b/code/src/views/telaInicial.ejs
@@ -393,6 +393,17 @@
           <a href="/professores/enviar-moedas" class="btn btn-primary">Enviar Moedas</a>
         </div>
       </div>
+      <div class="card">
+        <div class="card-header">
+          <div class="card-icon" style="background-color: var(--info); color: white;">📊</div>
+          <div class="card-title">Histórico de Transações</div>
+        </div>
+        <div class="card-content">
+          <p>Acompanhe todas as suas transações de moedas.</p>
+          <br>
+          <a href="/transacoes/exibir-transacoes" class="btn btn-primary">Ver Histórico</a>
+        </div>
+      </div>
     </div>
   </div>
 
